--- a/test/e2e/dev-test.html
+++ b/test/e2e/dev-test.html
@@ -26,6 +26,7 @@
     <script src="../../docs/demos/typeahead/test.js"></script>
     <script src="../../docs/demos/validate-local/test.js"></script>
     <script src="../../docs/demos/validate-remote/test.js"></script>
+    <script src="../../docs/demos/o-validator/test.js"></script>
     <script src="../../docs/demos/onbeforesave/test.js"></script>
     <script src="../../docs/demos/onaftersave/test.js"></script>
     <script src="../../docs/demos/editable-form/test.js"></script>
