--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <li class="active"><a href="#">Home</a></li>
             <li><a href="https://github.com/vitalets/angular-xeditable">Github</a></li>
           </ul>
-          <form class="navbar-form navbar-right"><a href="zip/angular-xeditable-0.1.8.zip" style="font-weight:bold" class="btn btn-primary"><span style="margin-right:10px" class="glyphicon glyphicon-save"></span>Download 0.1.8 ~ 20kb</a></form>
+          <form class="navbar-form navbar-right"><a href="zip/angular-xeditable-0.1.9.zip" style="font-weight:bold" class="btn btn-primary"><span style="margin-right:10px" class="glyphicon glyphicon-save"></span>Download 0.1.9 ~ 20kb</a></form>
           <div style="padding-top: 13px">
 <!-- google+ -->
 <div id="socials" style="text-align: center">
@@ -116,7 +116,7 @@
                   <li><a href="#select-multiple">Select multiple</a></li>
                   <li><a href="#validate-local">Validate local</a></li>
                   <li><a href="#validate-remote">Validate remote</a></li>
-                  <li><a href="#o-validator">Validate inline</a></li>
+                  <li><a href="#o-validator">Validator attribute(single)</a></li>
                 </ul>
               </li>
               <li><a href="#onbeforesave">Submit</a>
@@ -200,7 +200,7 @@ to use power of angular and support complex forms / editable grids.</p>
 
               <pre class="prettyprint">&lt;link href=&quot;//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css&quot; rel=&quot;stylesheet&quot;&gt;</pre>
             </li>
-            <li> <span>Install angular-xeditable via </span><a href="http://bower.io" target="_blank">bower</a><span> or  </span><a href="zip/angular-xeditable-0.1.8.zip">download latest zip    </a>
+            <li> <span>Install angular-xeditable via </span><a href="http://bower.io" target="_blank">bower</a><span> or  </span><a href="zip/angular-xeditable-0.1.9.zip">download latest zip    </a>
               <pre class="prettyprint">bower install angular-xeditable </pre>
             </li>
             <li>Include angular-xeditable into your project
@@ -1091,7 +1091,7 @@ $scope.$watch("user", function(v) { $scope.$parent.debug["validate-remote"]=v; }
 });</pre>
                     </section>
                     <section id="o-validator">
-                      <h1>Validate inline</h1>
+                      <h1>Validator attribute(single)</h1>
                       <!-- watch change of user to update rootScope for debugging-->
                       <h3>demo</h3><a href="#" target="_blank" class="btn btn-info fiddle pull-right">jsFiddle</a>
                       <div class="well line-example"><div ng-controller="OValidatorCtrl">
