--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <!--docs css-->
     <link href="docs/css/docs.css" rel="stylesheet" media="screen">
     <!--angular-->
-    <script src="libs/angular/1.2.7/angular.js"></script>
-    <script src="libs/angular/1.2.7/angular-mocks.js"></script>
+    <!--script(src='libs/angular/1.2.7/angular.js')-->
+    <!--script(src='libs/angular/1.2.7/angular-mocks.js')-->
+    <script src="libs/angular/1.3.13/angular.js"></script>
+    <script src="libs/angular/1.3.13/angular-mocks.js"></script>
+    <script src="libs/angular/1.3.13/angular-sanitize.js"></script>
     <!--jquery (needed for bootstrap)-->
     <script src="libs/jquery/jquery-1.10.2.min.js"></script>
     <!--bootstrap-->
@@ -106,6 +109,9 @@
                   <li><a href="#bsdate">Date</a></li>
                   <li><a href="#bstime">Time</a></li>
                   <li><a href="#typeahead">Typeahead</a></li>
+                  <li><a href="#ui-select-simple">ui-select(simple)</a></li>
+                  <li><a href="#ui-select-template">ui-select(with template)</a></li>
+                  <li><a href="#ui-select-remote">ui-select(remote data)</a></li>
                 </ul>
               </li>
               <li><a href="#text-customize">Techniques</a>
@@ -116,7 +122,7 @@
                   <li><a href="#select-multiple">Select multiple</a></li>
                   <li><a href="#validate-local">Validate local</a></li>
                   <li><a href="#validate-remote">Validate remote</a></li>
-                  <li><a href="#o-validator">Validator attribute(single)</a></li>
+                  <li><a href="#o-validator">Validator attribute</a></li>
                 </ul>
               </li>
               <li><a href="#onbeforesave">Submit</a>
@@ -176,6 +182,9 @@ to use power of angular and support complex forms / editable grids.</p>
 <li><a href="#bstime">time</a></li>
 <li><a href="#html5-inputs">html5 inputs</a>        </li>
 <li><a href="#typeahead">typeahead</a></li>
+<li><a href="#ui-select-simple">ui-select(simple)</a></li>
+<li><a href="#ui-select-template">ui-select(with template)</a></li>
+<li><a href="#ui-select-remote">ui-select(remote data)</a></li>
 </ul>
 
               </td>
@@ -790,6 +799,210 @@ $scope.$watch("user", function(v) { $scope.$parent.debug["typeahead"]=v; }); });
   $scope.states = ['Alabama', 'Alaska', 'Arizona', 'Arkansas', 'California', 'Colorado', 'Connecticut', 'Delaware', 'Florida', 'Georgia', 'Hawaii', 'Idaho', 'Illinois', 'Indiana', 'Iowa', 'Kansas', 'Kentucky', 'Louisiana', 'Maine', 'Maryland', 'Massachusetts', 'Michigan', 'Minnesota', 'Mississippi', 'Missouri', 'Montana', 'Nebraska', 'Nevada', 'New Hampshire', 'New Jersey', 'New Mexico', 'New York', 'North Dakota', 'North Carolina', 'Ohio', 'Oklahoma', 'Oregon', 'Pennsylvania', 'Rhode Island', 'South Carolina', 'South Dakota', 'Tennessee', 'Texas', 'Utah', 'Vermont', 'Virginia', 'Washington', 'West Virginia', 'Wisconsin', 'Wyoming'];
 });</pre>
                     </section>
+                    <section id="ui-select-simple">
+                      <h1>ui-select(simple)</h1>
+                      <!-- watch change of user to update rootScope for debugging-->
+                      <h3>demo</h3><a href="#" target="_blank" class="btn btn-info fiddle pull-right">UI Select jsFiddle</a>
+                      <div class="well line-example"><div ng-controller="UiSelectSimpleCtrl">
+  <a href="#" editable-uiselect="user.name" 
+            e-style="width: 300px;"
+            e-datasrc="people"
+            e-valuekey="name"
+            e-displaynamekey="email">
+      {{user.name}}
+  </a>
+</div></div>
+                      <pre>{{ debug["ui-select-simple"] | json }}</pre>
+                      <p><p>Date control is implemented via <a href="https://github.com/angular-ui/ui-select/">Angular-ui ui-select</a>.  </p>
+<p>And set <code>editable-uiselect</code> attribute in editable element.
+Other parameters can be defined via <code>e-*</code> syntax.</p>
+<ul>
+<li><code>e-datasrc</code> : data source</li>
+<li><code>e-valuekey</code> : which property will present for your value</li>
+<li><code>e-displaynamekey</code> : which property will present for your display string</li>
+</ul>
+</p>
+                      <!--script(src=dir+'/controller.js')-->
+                      <script>app.controller('UiSelectSimpleCtrl', function($scope, $http, $q) {
+  $scope.user = { name: 'Adam'};
+  $scope.people = [
+    { name: 'Adam',      email: 'adam@email.com',      age: 10 },
+    { name: 'Amalie',    email: 'amalie@email.com',    age: 12 },
+    { name: 'Wladimir',  email: 'wladimir@email.com',  age: 30 },
+    { name: 'Samantha',  email: 'samantha@email.com',  age: 31 },
+    { name: 'Estefanía', email: 'estefanía@email.com', age: 16 },
+    { name: 'Natasha',   email: 'natasha@email.com',   age: 54 },
+    { name: 'Nicole',    email: 'nicole@email.com',    age: 43 },
+    { name: 'Adrian',    email: 'adrian@email.com',    age: 21 }
+  ];
+  
+$scope.$watch("user", function(v) { $scope.$parent.debug["ui-select-simple"]=v; }); });</script>
+                      <h3>html</h3>
+                      <pre class="prettyprint ng-non-bindable">&lt;div ng-controller=&quot;UiSelectSimpleCtrl&quot;&gt;
+  &lt;a href=&quot;#&quot; editable-uiselect=&quot;user.name&quot; 
+            e-style=&quot;width: 300px;&quot;
+            e-datasrc=&quot;people&quot;
+            e-valuekey=&quot;name&quot;
+            e-displaynamekey=&quot;email&quot;&gt;
+      {{user.name}}
+  &lt;/a&gt;
+&lt;/div&gt;</pre>
+                      <h3>controller.js</h3>
+                      <pre class="prettyprint">app.controller('UiSelectSimpleCtrl', function($scope, $http, $q) {
+  $scope.user = { name: 'Adam'};
+  $scope.people = [
+    { name: 'Adam',      email: 'adam@email.com',      age: 10 },
+    { name: 'Amalie',    email: 'amalie@email.com',    age: 12 },
+    { name: 'Wladimir',  email: 'wladimir@email.com',  age: 30 },
+    { name: 'Samantha',  email: 'samantha@email.com',  age: 31 },
+    { name: 'Estefanía', email: 'estefanía@email.com', age: 16 },
+    { name: 'Natasha',   email: 'natasha@email.com',   age: 54 },
+    { name: 'Nicole',    email: 'nicole@email.com',    age: 43 },
+    { name: 'Adrian',    email: 'adrian@email.com',    age: 21 }
+  ];
+  
+});</pre>
+                    </section>
+                    <section id="ui-select-template">
+                      <h1>ui-select(with template)</h1>
+                      <!-- watch change of user to update rootScope for debugging-->
+                      <h3>demo</h3><a href="#" target="_blank" class="btn btn-info fiddle pull-right">UI Select jsFiddle</a>
+                      <div class="well line-example"><div ng-controller="UiSelectTplCtrl">
+  <a href="#" editable-uiselect="user.name" 
+            e-style="width: 300px;"
+            e-template="addressInputTpl">
+      {{user.name}}
+  </a>
+</div>
+<script type="text/ng-template" id="addressInputTpl">
+    <ui-select-match placeholder="Enter an user...">{{$select.selected.name}}</ui-select-match>
+    <ui-select-choices repeat="value.name as value in people | uiSelectSearchFilter: {name: $select.search}">
+         <div ng-bind-html="value.name | highlight:$select.search"></div>
+         <div ng-bind="value.email"></div>
+    </ui-select-choices>
+</script></div>
+                      <pre>{{ debug["ui-select-template"] | json }}</pre>
+                      <p><p>Date control is implemented via <a href="https://github.com/angular-ui/ui-select/">Angular-ui ui-select</a>.  </p>
+<p>And set <code>editable-uiselect</code> attribute in editable element.
+Other parameters can be defined via <code>e-*</code> syntax.</p>
+<ul>
+<li><code>e-template</code> : template for your control (which will be appended to <code>&lt;ui-select&gt;</code> element)</li>
+</ul>
+</p>
+                      <!--script(src=dir+'/controller.js')-->
+                      <script>app.controller('UiSelectTplCtrl', function($scope, $http, $q) {
+  $scope.user = { name: 'Adam'};
+  $scope.people = [
+    { name: 'Adam',      email: 'adam@email.com',      age: 10 },
+    { name: 'Amalie',    email: 'amalie@email.com',    age: 12 },
+    { name: 'Wladimir',  email: 'wladimir@email.com',  age: 30 },
+    { name: 'Samantha',  email: 'samantha@email.com',  age: 31 },
+    { name: 'Estefanía', email: 'estefanía@email.com', age: 16 },
+    { name: 'Natasha',   email: 'natasha@email.com',   age: 54 },
+    { name: 'Nicole',    email: 'nicole@email.com',    age: 43 },
+    { name: 'Adrian',    email: 'adrian@email.com',    age: 21 }
+  ];
+  
+$scope.$watch("user", function(v) { $scope.$parent.debug["ui-select-template"]=v; }); });</script>
+                      <h3>html</h3>
+                      <pre class="prettyprint ng-non-bindable">&lt;div ng-controller=&quot;UiSelectTplCtrl&quot;&gt;
+  &lt;a href=&quot;#&quot; editable-uiselect=&quot;user.name&quot; 
+            e-style=&quot;width: 300px;&quot;
+            e-template=&quot;addressInputTpl&quot;&gt;
+      {{user.name}}
+  &lt;/a&gt;
+&lt;/div&gt;
+&lt;script type=&quot;text/ng-template&quot; id=&quot;addressInputTpl&quot;&gt;
+    &lt;ui-select-match placeholder=&quot;Enter an user...&quot;&gt;{{$select.selected.name}}&lt;/ui-select-match&gt;
+    &lt;ui-select-choices repeat=&quot;value.name as value in people | uiSelectSearchFilter: {name: $select.search}&quot;&gt;
+         &lt;div ng-bind-html=&quot;value.name | highlight:$select.search&quot;&gt;&lt;/div&gt;
+         &lt;div ng-bind=&quot;value.email&quot;&gt;&lt;/div&gt;
+    &lt;/ui-select-choices&gt;
+&lt;/script&gt;</pre>
+                      <h3>controller.js</h3>
+                      <pre class="prettyprint">app.controller('UiSelectTplCtrl', function($scope, $http, $q) {
+  $scope.user = { name: 'Adam'};
+  $scope.people = [
+    { name: 'Adam',      email: 'adam@email.com',      age: 10 },
+    { name: 'Amalie',    email: 'amalie@email.com',    age: 12 },
+    { name: 'Wladimir',  email: 'wladimir@email.com',  age: 30 },
+    { name: 'Samantha',  email: 'samantha@email.com',  age: 31 },
+    { name: 'Estefanía', email: 'estefanía@email.com', age: 16 },
+    { name: 'Natasha',   email: 'natasha@email.com',   age: 54 },
+    { name: 'Nicole',    email: 'nicole@email.com',    age: 43 },
+    { name: 'Adrian',    email: 'adrian@email.com',    age: 21 }
+  ];
+  
+});</pre>
+                    </section>
+                    <section id="ui-select-remote">
+                      <h1>ui-select(remote data)</h1>
+                      <!-- watch change of user to update rootScope for debugging-->
+                      <h3>demo</h3><a href="#" target="_blank" class="btn btn-info fiddle pull-right">UI Select jsFiddle</a>
+                      <div class="well line-example"><div ng-controller="UiSelectRemoteCtrl">
+  <a href="#" editable-uiselect="user.name" 
+            e-style="width: 300px;"
+            e-template="addressInputTpl"
+            onshow="loadPeople()">
+      {{user.name}}
+  </a>
+</div>
+<script type="text/ng-template" id="addressInputTpl">
+    <ui-select-match placeholder="Enter an user...">{{$select.selected.name}}</ui-select-match>
+    <ui-select-choices repeat="value.name as value in people | uiSelectSearchFilter: {name: $select.search}">
+         <div ng-bind-html="value.name | highlight:$select.search"></div>
+         <div ng-bind="value.email"></div>
+    </ui-select-choices>
+</script></div>
+                      <pre>{{ debug["ui-select-remote"] | json }}</pre>
+                      <p><p>Date control is implemented via <a href="https://github.com/angular-ui/ui-select/">Angular-ui ui-select</a>.  </p>
+<p>And set <code>editable-uiselect</code> attribute in editable element.
+Other parameters can be defined via <code>e-*</code> syntax.</p>
+<ul>
+<li><code>e-datasrc</code> : data source</li>
+<li><code>e-valuekey</code> : which property will present for your value</li>
+<li><code>e-displaynamekey</code> : which property will present for your display string</li>
+</ul>
+</p>
+                      <!--script(src=dir+'/controller.js')-->
+                      <script>app.controller('UiSelectRemoteCtrl', function($scope, $http, $q) {
+  $scope.user = { name: 'Adam'};
+  $scope.people = [];
+  $scope.loadPeople = function() {
+    return $scope.people.length ? null : $http.get('/people').success(function(data) {
+      $scope.people = data;
+      $scope.people;
+    });
+  };
+$scope.$watch("user", function(v) { $scope.$parent.debug["ui-select-remote"]=v; }); });</script>
+                      <h3>html</h3>
+                      <pre class="prettyprint ng-non-bindable">&lt;div ng-controller=&quot;UiSelectRemoteCtrl&quot;&gt;
+  &lt;a href=&quot;#&quot; editable-uiselect=&quot;user.name&quot; 
+            e-style=&quot;width: 300px;&quot;
+            e-template=&quot;addressInputTpl&quot;
+            onshow=&quot;loadPeople()&quot;&gt;
+      {{user.name}}
+  &lt;/a&gt;
+&lt;/div&gt;
+&lt;script type=&quot;text/ng-template&quot; id=&quot;addressInputTpl&quot;&gt;
+    &lt;ui-select-match placeholder=&quot;Enter an user...&quot;&gt;{{$select.selected.name}}&lt;/ui-select-match&gt;
+    &lt;ui-select-choices repeat=&quot;value.name as value in people | uiSelectSearchFilter: {name: $select.search}&quot;&gt;
+         &lt;div ng-bind-html=&quot;value.name | highlight:$select.search&quot;&gt;&lt;/div&gt;
+         &lt;div ng-bind=&quot;value.email&quot;&gt;&lt;/div&gt;
+    &lt;/ui-select-choices&gt;
+&lt;/script&gt;</pre>
+                      <h3>controller.js</h3>
+                      <pre class="prettyprint">app.controller('UiSelectRemoteCtrl', function($scope, $http, $q) {
+  $scope.user = { name: 'Adam'};
+  $scope.people = [];
+  $scope.loadPeople = function() {
+    return $scope.people.length ? null : $http.get('/people').success(function(data) {
+      $scope.people = data;
+      $scope.people;
+    });
+  };
+});</pre>
+                    </section>
                     <section id="text-customize">
                       <h1>Customize input</h1>
                       <!-- watch change of user to update rootScope for debugging-->
@@ -1091,15 +1304,15 @@ $scope.$watch("user", function(v) { $scope.$parent.debug["validate-remote"]=v; }
 });</pre>
                     </section>
                     <section id="o-validator">
-                      <h1>Validator attribute(single)</h1>
+                      <h1>Validator attribute</h1>
                       <!-- watch change of user to update rootScope for debugging-->
                       <h3>demo</h3><a href="#" target="_blank" class="btn btn-info fiddle pull-right">jsFiddle</a>
                       <div class="well line-example"><div ng-controller="OValidatorCtrl">
   <a href="#" o-validator="required" onbeforesave="checkname($data)" editable-text="user.name">{{ user.name || 'empty' }}</a>
 </div></div>
                       <pre>{{ debug["o-validator"] | json }}</pre>
-                      <p><p>To validate a form field you can add <code>o-validator</code> attribute to validate your input. <code>o-validator</code> can be inputed by multiple validator(which are seperated by comma).
-To define your own validation rule, you have to config your rules in <code>editableValidationRules</code> factory.</p>
+                      <p><p>To validate a form field you can add <code>o-validator</code> attribute to validate your input. <code>o-validator</code> can be inputed by multiple validator(which are seperated by comma).<br>Ex: <code>&lt;a href=&quot;#&quot; o-validator=&quot;required,max300chars&quot;</code> </p>
+<p>To define your own validation rule, you have to config your rules in <code>editableValidationRules</code> factory.<br>Ex:<br>    <code>editableValidationRules.addValidator({</code><br>    <code>validatorName:&#39;max300chars&#39;,</code><br>    <code>errorMsg: &#39;Max 300 characters&#39;,</code><br>    <code>validationFunc: max300chars</code><br>    <code>});</code>  </p>
 </p>
                       <!--script(src=dir+'/controller.js')-->
                       <script>app.controller('OValidatorCtrl', function($scope) {
