--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <li class="active"><a href="#">Home</a></li>
             <li><a href="https://github.com/vitalets/angular-xeditable">Github</a></li>
           </ul>
-          <form class="navbar-form navbar-right"><a href="zip/angular-xeditable-0.1.9.zip" style="font-weight:bold" class="btn btn-primary"><span style="margin-right:10px" class="glyphicon glyphicon-save"></span>Download 0.1.9 ~ 21kb</a></form>
+          <form class="navbar-form navbar-right"><a href="zip/angular-xeditable-0.1.9.zip" style="font-weight:bold" class="btn btn-primary"><span style="margin-right:10px" class="glyphicon glyphicon-save"></span>Download 0.1.9 ~ 22kb</a></form>
           <div style="padding-top: 13px">
 <!-- google+ -->
 <div id="socials" style="text-align: center">
@@ -115,6 +115,7 @@
                   <li><a href="#ui-select-simple">ui-select(simple)</a></li>
                   <li><a href="#ui-select-template">ui-select(with template)</a></li>
                   <li><a href="#ui-select-remote">ui-select(remote data)</a></li>
+                  <li><a href="#custom">custom</a></li>
                 </ul>
               </li>
               <li><a href="#text-customize">Techniques</a>
@@ -188,6 +189,7 @@ to use power of angular and support complex forms / editable grids.</p>
 <li><a href="#ui-select-simple">ui-select(simple)</a></li>
 <li><a href="#ui-select-template">ui-select(with template)</a></li>
 <li><a href="#ui-select-remote">ui-select(remote data)</a></li>
+<li><a href="#custom">custom</a></li>
 </ul>
 
               </td>
@@ -250,7 +252,7 @@ to use power of angular and support complex forms / editable grids.</p>
                       <!-- watch change of user to update rootScope for debugging-->
                       <h3>demo</h3><a href="http://jsfiddle.net/NfPcH/25/" target="_blank" class="btn btn-info fiddle pull-right">jsFiddle</a>
                       <div class="well line-example"><div ng-controller="TextSimpleCtrl">
-  <a href="#" editable-text="user.name">{{ user.name || 'empty' }}</a>
+  <a href="#" editable-text="user.name" o-directive="hello">{{ user.name || 'empty' }}</a>
 </div></div>
                       <pre>{{ debug["text-simple"] | json }}</pre>
                       <p><p>To make element editable via textbox just add <code>editable-text=&quot;model.field&quot;</code> attribute.</p>
@@ -263,7 +265,7 @@ to use power of angular and support complex forms / editable grids.</p>
 $scope.$watch("user", function(v) { $scope.$parent.debug["text-simple"]=v; }); });</script>
                       <h3>html</h3>
                       <pre class="prettyprint ng-non-bindable">&lt;div ng-controller=&quot;TextSimpleCtrl&quot;&gt;
-  &lt;a href=&quot;#&quot; editable-text=&quot;user.name&quot;&gt;{{ user.name || 'empty' }}&lt;/a&gt;
+  &lt;a href=&quot;#&quot; editable-text=&quot;user.name&quot; o-directive=&quot;hello&quot;&gt;{{ user.name || 'empty' }}&lt;/a&gt;
 &lt;/div&gt;</pre>
                       <h3>controller.js</h3>
                       <pre class="prettyprint">app.controller('TextSimpleCtrl', function($scope) {
@@ -1006,6 +1008,94 @@ $scope.$watch("user", function(v) { $scope.$parent.debug["ui-select-remote"]=v; 
   };
 });</pre>
                     </section>
+                    <section id="custom">
+                      <h1>custom</h1>
+                      <!-- watch change of user to update rootScope for debugging-->
+                      <h3>demo</h3><a href="#" target="_blank" class="btn btn-info fiddle pull-right">UI Select jsFiddle</a>
+                      <div class="well line-example"><div ng-controller="Custom">
+  <a href="#" editable-custom="user.name" 
+            e-template="'customTpl'"
+            onshow="updateName($modelScope)">
+      {{user.name}}
+  </a>
+</div>
+<script type="text/ng-template" id="customTpl">
+  <table>
+  	<tr>
+  		<td>
+  			First Name
+  		</td>
+  		<td>
+  			<input type="text" ng-model="firstName" ng-change="updateName($modelScope)" />
+  		</td>
+  	</tr>
+  	<tr>
+  		<td>Last Name</td>
+  		<td>
+  			<input type="text" ng-model="lastName"  ng-change="updateName($modelScope)" />
+  		</td>
+  	</td>
+  </table>
+</script></div>
+                      <pre>{{ debug["custom"] | json }}</pre>
+                      <p><p>This directive let user can custom their input</p>
+<ul>
+<li><code>e-template</code> : template for your input</li>
+<li><code>onshow</code> : call your initialize input</li>
+<li><code>$modelScope</code>: is a variable relate to editable scope.</li>
+</ul>
+</p>
+                      <!--script(src=dir+'/controller.js')-->
+                      <script>app.controller('Custom', function($scope, $http, $q) {
+  $scope.user = { name: 'Adam'};
+
+  $scope.firstName="bruno"
+  $scope.lastName = "mars";
+  $scope.updateName = function(modelScope)
+  {
+  	var userName = modelScope.firstName + " " + modelScope.lastName;
+  	modelScope.$data = userName;
+  }
+$scope.$watch("user", function(v) { $scope.$parent.debug["custom"]=v; }); });</script>
+                      <h3>html</h3>
+                      <pre class="prettyprint ng-non-bindable">&lt;div ng-controller=&quot;Custom&quot;&gt;
+  &lt;a href=&quot;#&quot; editable-custom=&quot;user.name&quot; 
+            e-template=&quot;'customTpl'&quot;
+            onshow=&quot;updateName($modelScope)&quot;&gt;
+      {{user.name}}
+  &lt;/a&gt;
+&lt;/div&gt;
+&lt;script type=&quot;text/ng-template&quot; id=&quot;customTpl&quot;&gt;
+  &lt;table&gt;
+  	&lt;tr&gt;
+  		&lt;td&gt;
+  			First Name
+  		&lt;/td&gt;
+  		&lt;td&gt;
+  			&lt;input type=&quot;text&quot; ng-model=&quot;firstName&quot; ng-change=&quot;updateName($modelScope)&quot; /&gt;
+  		&lt;/td&gt;
+  	&lt;/tr&gt;
+  	&lt;tr&gt;
+  		&lt;td&gt;Last Name&lt;/td&gt;
+  		&lt;td&gt;
+  			&lt;input type=&quot;text&quot; ng-model=&quot;lastName&quot;  ng-change=&quot;updateName($modelScope)&quot; /&gt;
+  		&lt;/td&gt;
+  	&lt;/td&gt;
+  &lt;/table&gt;
+&lt;/script&gt;</pre>
+                      <h3>controller.js</h3>
+                      <pre class="prettyprint">app.controller('Custom', function($scope, $http, $q) {
+  $scope.user = { name: 'Adam'};
+
+  $scope.firstName=&quot;bruno&quot;
+  $scope.lastName = &quot;mars&quot;;
+  $scope.updateName = function(modelScope)
+  {
+  	var userName = modelScope.firstName + &quot; &quot; + modelScope.lastName;
+  	modelScope.$data = userName;
+  }
+});</pre>
+                    </section>
                     <section id="text-customize">
                       <h1>Customize input</h1>
                       <!-- watch change of user to update rootScope for debugging-->
@@ -1382,9 +1472,10 @@ Useful for validation and processing errors.</li>
   };
 
   $scope.updateUser = function(data) {
+  	console.log(data);
     return $http.post('/updateUser', {id: $scope.user.id, name: data});
   };
-$scope.$watch("user", function(v) { $scope.$parent.debug["onbeforesave"]=v; }); });</script>
+});;</script>
                       <h3>html</h3>
                       <pre class="prettyprint ng-non-bindable">&lt;div ng-controller=&quot;OnbeforesaveCtrl&quot;&gt;
   &lt;a href=&quot;#&quot; editable-text=&quot;user.name&quot; onbeforesave=&quot;updateUser($data)&quot;&gt;
@@ -1399,9 +1490,10 @@ $scope.$watch("user", function(v) { $scope.$parent.debug["onbeforesave"]=v; }); 
   };
 
   $scope.updateUser = function(data) {
+  	console.log(data);
     return $http.post('/updateUser', {id: $scope.user.id, name: data});
   };
-});</pre>
+});;</pre>
                     </section>
                     <section id="onaftersave">
                       <h1>Submit via onaftersave</h1>
@@ -1461,7 +1553,7 @@ $scope.$watch("user", function(v) { $scope.$parent.debug["onaftersave"]=v; }); }
     <div>
       <!-- editable username (text with validation) -->
       <span class="title">User name: </span>
-      <span editable-text="user.name" e-name="name" onbeforesave="checkName($data)" e-required>{{ user.name || 'empty' }}</span>
+      <span editable-text="user.name" e-name="name" o-validator="required" onbeforesave="checkName($data)">{{ user.name || 'empty' }}</span>
     </div> 
 
     <div>
@@ -1599,7 +1691,7 @@ $scope.$watch("user", function(v) { $scope.$parent.debug["onaftersave"]=v; }); }
     &lt;div&gt;
       &lt;!-- editable username (text with validation) --&gt;
       &lt;span class=&quot;title&quot;&gt;User name: &lt;/span&gt;
-      &lt;span editable-text=&quot;user.name&quot; e-name=&quot;name&quot; onbeforesave=&quot;checkName($data)&quot; e-required&gt;{{ user.name || 'empty' }}&lt;/span&gt;
+      &lt;span editable-text=&quot;user.name&quot; e-name=&quot;name&quot; o-validator=&quot;required&quot; onbeforesave=&quot;checkName($data)&quot;&gt;{{ user.name || 'empty' }}&lt;/span&gt;
     &lt;/div&gt; 
 
     &lt;div&gt;
